src/objects/BHAT_Reviewer__c.object
<CustomObject>
    <description>BHAT</description>
    <fields>
        <fullName>Division_Dept__c</fullName>
        <label>Division/Dept</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Reviewer__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Statewide</fullName>
                </value>
                <value>
                    <fullName>No Cal</fullName>
                </value>
                <value>
                    <fullName>So Cal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BHAT_Reviewers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Staff_To_Review__c</fullName>
        <label>Total Staff To Review</label>
        <summaryForeignKey>BHAT_Reviewer_Staff__c.Reviewer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>BHAT Reviewer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Division_Dept__c</columns>
        <columns>Region__c</columns>
        <columns>Reviewer__c</columns>
        <columns>Email__c</columns>
        <columns>Total_Staff_To_Review__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BR-{0000}</displayFormat>
        <label>BHAT Reviewer No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BHAT Reviewers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>